# doppler_dimming_master

./: README.md  TODO.txt  compile_and_upload.sh  pyproject.toml  requirements.txt  setup.py  tutorial.ipynb
docs/: create_documentation.sh
docs/source/: conf.py  doppler_dimming_lib.c_libraries.rst  doppler_dimming_lib.rst  index.rst
doppler_dimming_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/doppler_dimming_lib/: __init__.py  codex.py  integrals.py  inversion.py  metis.py  parallelization.py  utils.py
src/doppler_dimming_lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/doppler_dimming_lib/c_libraries/: c_lib.py  compile_c.sh  integrands_lib.c
src/doppler_dimming_lib/data/: __init__.py
src/doppler_dimming_lib/data/codex_filters/: approx_filter_params.json
src/doppler_dimming_lib/data/photospheric_spectra/integrated/: MODTRAN_609.97s.npy  Thekaekara_3.14s.npy  Thuillier_19.88s.npy
src/doppler_dimming_lib/doppler_dimming_lib.egg-info/: SOURCES.txt  top_level.txt
src/doppler_dimming_lib/spectra/: spectra.py
tests/: __init__.py  temp.py  test.py
