[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "doppler_dimming_lib"
version = "1.0.0"
authors = [
  { name="Haudemand Hervé", email="herve.haudemand@inaf.it" },
]
description = "Library for the CODEX-METIS thomson scattering electron temperature diagnostic"
readme = "README.md"
dependencies = [
    "astropy",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "sunpy",
    "tqdm",
    "openpyxl",
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# dont use, experimental
#[tool.setuptools]
#ext-modules = [
#  {name="doppler_dimming_lib.c_libraries.integrands_lib.so",  sources=["doppler_dimming_lib.c_libraries.integrands_lib.c"]}
#]

[tool.setuptools.packages.find]
namespaces = true
where = ["src", "tests"]

[tool.setuptools.package-data]
"doppler_dimming_lib.data.codex_filters" = ["*.json", "*.xlsx"]
"doppler_dimming_lib.data.photospheric_spectra" = ["*.txt"]
"doppler_dimming_lib.c_libraries" = ["*.sh", "*.c"]
"tests" = ["*.py"]